	Fixed: Bind9 must not be restarted each time a DNS zone is updated. A simple reload should be sufficient
	Fixed: Some errors are not trapped

DATABASE
	Added: domain_dns_status field in domain_dns table ( Custom DNS record status field )
	Added: plugin_config_prev column in plugin table

FRONTEND
	Changed: Stores the Github payload as json file instead of PHP file ( iMSCP_Update_Version::getUpdateInfo() )
	Fixed: Do not fetch more data than needed from GitHub ( iMSCP_Update_Version::getUpdateInfo() )
	Fixed: Force reload of newest mail body footprint file ( iMSCP_Exception_Writer_Mail::onUncaughtException() )
	Fixed: Html in title attribute must not be auto-escaped by jQueryUI tooltip
	Fixed: Translate the INADDR_ANY 0.0.0.0 IP address to 'Any' ( Services status )
	Improved: Translations strings entries can now be accessed as object properties ( i18n_getJsTranslations() )
	Removed: imscp_delete_opcode_file() and imscp_clear_opcode_cache() functions

INSTALLER
	Fixed: Missing Email::Simple Perl module ( no longer required )
	Fixed: Use of uninitialized value $dbPass in string ( imscp/engine/setup/imscp-setup-methods.pl line 482 )

PLUGINS
	Added: iMSCP_Plugin::getConfigPrev() and iMSCP_Plugin::getConfigPrevParam() methods
	Added: require_api info field ( field which allows the plugins to define the required i-MSCP plugin API )
	Fixed: Force reload of newest plugin info file ( iMSCP_Plugin::getInfo() )
	Fixed: Force reload of newest plugin configuration file ( iMSCP_Plugin::getConfigFromFile() )
	Fixed: Opcode cache is not correctly resetted on plugin list update
	Updated: API to version 1.0.0

SKELETON
	Removed: Link to the panel in default index.html files ( Panel must not be publicly exposed )
	Fixed: Wrong link for favicon in error pages

SERVICES
	Fixed: Apache access.log file are put in wrong directory ( vlogger )
	Fixed: Log summary message on TLS handshake completion ( Postfix )

YOUTRACK
	Fixed #IP-1275: Apache access logs are created in /<domain.tld>